# server-side-photon

./: .gitignore  CONSTRAINTS.md  Cargo.toml  GEMINI.md  MATRIX_MATH.md  README.md
.github/workflows/: publish.yml
.wash/: config.yaml
deploy/control/: http-api.yaml  task-photon.yaml
deploy/wasmcloud/: workloaddeployment.yaml
http-api/: Cargo.toml  transforms.json  ui.html
http-api/src/: lib.rs
manifests/: httptrigger.yaml  workloaddeployment.yaml
task-photon/: Cargo.toml
task-photon/src/: lib.rs  transforms.rs
tests/: benchmark.sh  test_all_transforms.sh
tests/tools/: Cargo.toml
tests/tools/src/: check_png.rs  mkimage.rs  mkpayload.rs
